--- a/mingw-w64-crt/lib64/msvcr120d.def.in
+++ b/mingw-w64-crt/lib64/msvcr120d.def.in
@@ -1838,21 +1838,21 @@ acos
 acosf
 acosh
 acoshf
-acoshl
+; acoshl ; Can't use long double functions from the CRT on x86
 asctime
 asctime_s
 asin
 asinf
 asinh
 asinhf
-asinhl
+; asinhl ; Can't use long double functions from the CRT on x86
 atan
 atan2
 atan2f
 atanf
 atanh
 atanhf
-atanhl
+; atanhl ; Can't use long double functions from the CRT on x86
 atexit
 atof
 atoi
@@ -1863,110 +1863,110 @@ bsearch_s
 btowc
 cabs
 cabsf
-cabsl
+; cabsl ; Can't use long double functions from the CRT on x86
 cacos
 cacosf
 cacosh
 cacoshf
-cacoshl
-cacosl
+; cacoshl ; Can't use long double functions from the CRT on x86
+; cacosl ; Can't use long double functions from the CRT on x86
 calloc
 carg
 cargf
-cargl
+; cargl ; Can't use long double functions from the CRT on x86
 casin
 casinf
 casinh
 casinhf
-casinhl
-casinl
+; casinhl ; Can't use long double functions from the CRT on x86
+; casinl ; Can't use long double functions from the CRT on x86
 catan
 catanf
 catanh
 catanhf
-catanhl
-catanl
+; catanhl ; Can't use long double functions from the CRT on x86
+; catanl ; Can't use long double functions from the CRT on x86
 cbrt
 cbrtf
-cbrtl
+; cbrtl ; Can't use long double functions from the CRT on x86
 ccos
 ccosf
 ccosh
 ccoshf
-ccoshl
-ccosl
+; ccoshl ; Can't use long double functions from the CRT on x86
+; ccosl ; Can't use long double functions from the CRT on x86
 ceil
 ceilf
 cexp
 cexpf
-cexpl
+; cexpl ; Can't use long double functions from the CRT on x86
 cimag
 cimagf
-cimagl
+; cimagl ; Can't use long double functions from the CRT on x86
 clearerr
 clearerr_s
 clock
 clog
 clog10
 clog10f
-clog10l
+; clog10l ; Can't use long double functions from the CRT on x86
 clogf
-clogl
+; clogl ; Can't use long double functions from the CRT on x86
 conj
 conjf
-conjl
+; conjl ; Can't use long double functions from the CRT on x86
 copysign
 copysignf
-copysignl
+; copysignl ; Can't use long double functions from the CRT on x86
 cos
 cosf
 cosh
 coshf
 cpow
 cpowf
-cpowl
+; cpowl ; Can't use long double functions from the CRT on x86
 cproj
 cprojf
-cprojl
+; cprojl ; Can't use long double functions from the CRT on x86
 creal
 crealf
-creall
+; creall ; Can't use long double functions from the CRT on x86
 csin
 csinf
 csinh
 csinhf
-csinhl
-csinl
+; csinhl ; Can't use long double functions from the CRT on x86
+; csinl ; Can't use long double functions from the CRT on x86
 csqrt
 csqrtf
-csqrtl
+; csqrtl ; Can't use long double functions from the CRT on x86
 ctan
 ctanf
 ctanh
 ctanhf
-ctanhl
-ctanl
+; ctanhl ; Can't use long double functions from the CRT on x86
+; ctanl ; Can't use long double functions from the CRT on x86
 div
 erf
 erfc
 erfcf
-erfcl
+; erfcl ; Can't use long double functions from the CRT on x86
 erff
-erfl
+; erfl ; Can't use long double functions from the CRT on x86
 exit
 exp
 exp2
 exp2f
-exp2l
+; exp2l ; Can't use long double functions from the CRT on x86
 expf
 expm1
 expm1f
-expm1l
+; expm1l ; Can't use long double functions from the CRT on x86
 fabs
 fclose
 fdim
 fdimf
-fdiml
+; fdiml ; Can't use long double functions from the CRT on x86
 feclearexcept
 fegetenv
 fegetexceptflag
@@ -1990,13 +1990,13 @@ floor
 floorf
 fma
 fmaf
-fmal
+; fmal ; Can't use long double functions from the CRT on x86
 fmax
 fmaxf
-fmaxl
+; fmaxl ; Can't use long double functions from the CRT on x86
 fmin
 fminf
-fminl
+; fminl ; Can't use long double functions from the CRT on x86
 fmod
 fmodf
 fopen
@@ -2033,7 +2033,7 @@ getwc
 getwchar
 ilogb
 ilogbf
-ilogbl
+; ilogbl ; Can't use long double functions from the CRT on x86
 imaxabs
 imaxdiv
 is_wctype
@@ -2069,36 +2069,36 @@ ldexp
 ldiv
 lgamma
 lgammaf
-lgammal
+; lgammal ; Can't use long double functions from the CRT on x86
 llabs
 lldiv
 llrint
 llrintf
-llrintl
+; llrintl ; Can't use long double functions from the CRT on x86
 llround
 llroundf
-llroundl
+; llroundl ; Can't use long double functions from the CRT on x86
 localeconv
 log
 log10
 log10f
 log1p
 log1pf
-log1pl
+; log1pl ; Can't use long double functions from the CRT on x86
 log2
 log2f
-log2l
+; log2l ; Can't use long double functions from the CRT on x86
 logb
 logbf
-logbl
+; logbl ; Can't use long double functions from the CRT on x86
 logf
 longjmp
 lrint
 lrintf
-lrintl
+; lrintl ; Can't use long double functions from the CRT on x86
 lround
 lroundf
-lroundl
+; lroundl ; Can't use long double functions from the CRT on x86
 malloc
 mblen
 mbrlen
@@ -2119,16 +2119,16 @@ modf
 modff
 nan
 nanf
-nanl
+; nanl ; Can't use long double functions from the CRT on x86
 nearbyint
 nearbyintf
-nearbyintl
+; nearbyintl ; Can't use long double functions from the CRT on x86
 nextafter
 nextafterf
-nextafterl
-nexttoward
-nexttowardf
-nexttowardl
+; nextafterl ; Can't use long double functions from the CRT on x86
+; nexttoward ; Can't use long double functions from the CRT on x86
+; nexttowardf ; Can't use long double functions from the CRT on x86
+; nexttowardl ; Can't use long double functions from the CRT on x86
 norm
 normf
 norml
@@ -2150,25 +2150,25 @@ rand_s
 realloc
 remainder
 remainderf
-remainderl
+; remainderl ; Can't use long double functions from the CRT on x86
 remove
 remquo
 remquof
-remquol
+; remquol ; Can't use long double functions from the CRT on x86
 rename
 rewind
 rint
 rintf
-rintl
+; rintl ; Can't use long double functions from the CRT on x86
 round
 roundf
-roundl
+; roundl ; Can't use long double functions from the CRT on x86
 scalbln
 scalblnf
-scalblnl
+; scalblnl ; Can't use long double functions from the CRT on x86
 scalbn
 scalbnf
-scalbnl
+; scalbnl ; Can't use long double functions from the CRT on x86
 scanf
 scanf_s
 setbuf
@@ -2215,7 +2215,7 @@ strtoimax
 strtok
 strtok_s
 strtol
-strtold
+; strtold ; Can't use long double functions from the CRT on x86
 strtoll
 strtoul
 strtoull
@@ -2231,7 +2231,7 @@ tanh
 tanhf
 tgamma
 tgammaf
-tgammal
+; tgammal ; Can't use long double functions from the CRT on x86
 tmpfile
 tmpfile_s
 tmpnam
@@ -2243,7 +2243,7 @@ towlower
 towupper
 trunc
 truncf
-truncl
+; truncl ; Can't use long double functions from the CRT on x86
 ungetc
 ungetwc
 vfprintf
@@ -2299,7 +2299,7 @@ wcstoimax
 wcstok
 wcstok_s
 wcstol
-wcstold
+; wcstold ; Can't use long double functions from the CRT on x86
 wcstoll
 wcstombs
 wcstombs_s
