crt: Do not include nextafter symbol alias for msvcr120* and UCRT
msvcr120 and UCRT provides native nextafter symbol. So do not define
duplicate symbol nextafter via crt-aliases.def.in file for these import
libraries.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -203,7 +203,9 @@ ADD_UNDERSCORE(yn)
 
 ; This is list of symbol aliases for C99 functions
 ; ADD_UNDERSCORE(logb)
+#ifdef WITH_NEXTAFTER_ALIAS
 ADD_UNDERSCORE(nextafter)
+#endif
 
 #if defined(DEF_ARM32) || defined(DEF_ARM64)
 ; This is list of symbol aliases for C99 ARM long double functions
