--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -1830,6 +1830,7 @@ F_ARM_ANY(fabsf) ; i386 and x64 fabsf provided by emu
 #define NO_FIXED_SIZE_64_ALIAS
 #define NO_TIME_ALIAS
 #define NO_STRCMPI_ALIAS
+#define WITH_NEXTAFTER_ALIAS
 #ifdef DEF_I386
 ; i386 __iob_func replaced by alias
 #define WITH_IOB_FUNC_ALIAS
