--- a/mingw-w64-crt/lib32/crtdll.def.in
+++ b/mingw-w64-crt/lib32/crtdll.def.in
@@ -629,4 +629,5 @@ _ultow
 #define NO_WIDE_FIXED_SIZE
 #define NO_I64_FIXED_SIZE
 #define NO_STRCMPI_ALIAS
+#define WITH_NEXTAFTER_ALIAS
 #include "crt-aliases.def.in"
